--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "2.3.3"
 flask-mysql-connector = "*"
-werkzeug = "*"
-flask-wtf = "*"
+flask-bootstrap = "*"
 python-dotenv = "*"
+flask = "2.3.3"
+flask-wtf = "==1.1.1"
+werkzeug = "==2.3.7"
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
+python_version = "3.10"
