--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask-mysql-connector = "*"
-flask-bootstrap = "*"
-python-dotenv = "*"
 flask = "2.3.3"
-flask-wtf = "==1.1.1"
-werkzeug = "==2.3.7"
+flask-mysql-connector = "*"
+werkzeug = "*"
+flask-wtf = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.11"
